--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw1",
+  "name": "blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,7 @@
     "sweetalert2": "^11.1.9",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "http://chengcheng1231.github.io/react-week22",
+  "homepage": "http://chengcheng1231.github.io/React-Blog",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
